# Ninja_FS

./: .gitignore  CMakeLists.txt  Ninja.sln  Ninja.vcxproj
include/: Access.h  Data.h  File_Header.h  functions.h
src/: Access.cpp  Data.cpp  File_Header.cpp  functions.cpp  main.cpp
